crates/toml/tests/snapshots/invalid/inline-table/overwrite-08.stderr
TOML parse error at line 1, column 35
  |
1 | tab = { inner = { dog = "best" }, inner.cat = "worst" }
  |                                   ^^^^^
duplicate key
